<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingBottom="15dp"
    android:id="@+id/dialog_bottom_sheet"
    >
    <TextView
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>
    <TextView
        android:id="@+id/promote_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/promote_to_moderator"
        android:padding="15dp"
        android:textSize="16sp"

        app:layout_constraintTop_toBottomOf="@id/name_view"
        app:layout_constraintStart_toStartOf="parent"

        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"></TextView>
    <TextView
        android:id="@+id/remove_moderator_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_as_moderator"
        android:textColor="@color/red"
        android:padding="15dp"
        android:textSize="16sp"

        app:layout_constraintTop_toBottomOf="@id/promote_view"
        app:layout_constraintStart_toStartOf="parent"

        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"

        android:visibility="gone"></TextView>
    <TextView
        android:id="@+id/remove_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_from_conversation"
        android:textColor="@color/red"
        android:padding="15dp"
        android:textSize="16sp"

        app:layout_constraintTop_toBottomOf="@id/remove_moderator_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"></TextView>
</androidx.constraintlayout.widget.ConstraintLayout>