<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingTop="16dp"
    android:paddingRight="25dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/welcome_header"
            android:textColor="@color/darkGray"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Username -->
        <!--    <EditText-->
        <!--        android:id="@+id/username"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:hint="@string/prompt_email"-->
        <!--        android:padding="15dp"-->
        <!--        android:maxLines="1"-->
        <!--        android:textSize="16sp"-->
        <!--        android:background="@drawable/bg_round_border_edittext"-->
        <!--        android:selectAllOnFocus="true"-->

        <!--        app:layout_constraintTop_toBottomOf="@+id/header_text"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        android:layout_marginTop="15dp"/>-->

        <!-- Username -->
        <RelativeLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_text">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@android:color/transparent"
                    android:hint="@string/prompt_email"
                    android:selectAllOnFocus="true" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <!-- Password -->
        <!--    <EditText-->
        <!--        android:id="@+id/password"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:padding="15dp"-->
        <!--        android:maxLines="1"-->
        <!--        android:textSize="16sp"-->
        <!--        android:background="@drawable/bg_round_border_edittext"-->

        <!--        app:layout_constraintTop_toBottomOf="@+id/username_layout"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->

        <!--        android:layout_marginTop="15dp"-->

        <!--        android:hint="@string/prompt_password"-->
        <!--        android:imeOptions="actionDone"-->
        <!--        android:inputType="textPassword"-->
        <!--        android:selectAllOnFocus="true"-->
        <!--        android:imeActionLabel="@string/action_sign_in_short" />-->

        <!-- Password -->
        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@android:color/transparent"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/forgot_password" />
        </RelativeLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:enabled="false"
            android:text="@string/action_sign_in_short"
            android:textAllCaps="false"
            android:textSize="16sp"

            android:theme="@style/KoderTheme"
            app:cornerRadius="63dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/create_an_account"

            app:layout_constraintTop_toBottomOf="@+id/password_layout" />

        <TextView
            android:id="@+id/create_an_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:enabled="false"
            android:gravity="right"
            android:paddingTop="15dp"

            android:paddingBottom="15dp"

            android:text="@string/or_create_an_account"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@id/login"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/password_layout"
            app:layout_constraintEnd_toEndOf="@+id/password_layout"
            app:layout_constraintStart_toStartOf="@+id/password_layout"

            app:layout_constraintTop_toTopOf="@id/username_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>