<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="0dp"
    sothree:umanoShadowHeight="0dp"
    sothree:umanoParallaxOffset="100dp"
    sothree:umanoOverlay="true"
    sothree:umanoDragView="@+id/dragView">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".ui.conversation.ConversationActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:minHeight="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@android:color/white"
                    android:background="?attr/colorPrimary">

                    <ImageView
                        android:id="@+id/action_profile"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_qrcode_regular" />
                </androidx.appcompat.widget.Toolbar>

                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conversations"
                    android:textSize="18dp"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:overScrollMode="never" />

                <TextView
                    android:id="@+id/empty_conversations_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/empty_conversations"
                    android:textSize="17sp"
                    android:visibility="gone"/>

            </FrameLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_round_top"
        android:id="@+id/dragView"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:src="@drawable/ic_handle_24dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:cardCornerRadius="32dp"
            app:strokeWidth="0dp"

            app:layout_constraintBottom_toTopOf="@id/display_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            sothree:layout_constraintVertical_bias="1.0"
            android:layout_marginBottom="6dp"
            >
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/profile_image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_account_circle_24dp" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"

            app:layout_constraintBottom_toTopOf="@id/qr_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            sothree:layout_constraintVertical_bias="1.0"
            android:layout_marginBottom="28dp"/>

        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/action_share"
            app:icon="@drawable/ic_share_rounded_24"
            app:iconSize="20dp"
            app:iconGravity="textStart"
            app:cornerRadius="63dp"
            android:textAllCaps="false"

            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qr_code"
            sothree:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/action_logout"
            android:textAllCaps="false"
            app:cornerRadius="63dp"

            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_share"
            sothree:layout_constraintVertical_bias="0.0"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>